--- a/village/package.json
+++ b/village/package.json
@@ -14,7 +14,8 @@
     "google-maps-react": "^2.0.6",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
